# zeynep

./: CHANGELOG.md  ChangeLog  Makefile.am  README.md  configure.ac  distclean  zeynep.conf.in  zeynep.in  zeynep.spec.in
m4/: ax_python_module.m4
maintainers/: makepot
po/: .gitignore  LINGUAS  Makefile.am  POTFILES  tr.po  zeynep.pot
src/: zeynep  zeynep-package-builder  zeynep-tarball-creator
